umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_chloroform.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: C3v
order: 6
equivalence_sets:
  - - C(0)
  - - H(1)
  - - Cl(2)
    - Cl(3)
    - Cl(4)
