umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_cubane.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: Oh
order: 48
equivalence_sets:
  - - C(0)
    - C(1)
    - C(2)
    - C(3)
    - C(4)
    - C(5)
    - C(6)
    - C(7)
  - - H(8)
    - H(9)
    - H(10)
    - H(11)
    - H(12)
    - H(13)
    - H(14)
    - H(15)
