umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_cucurbit_6_uril.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: D6h
order: 24
equivalence_sets:
  - - C(0)
    - C(1)
    - C(2)
    - C(3)
    - C(4)
    - C(5)
    - C(6)
    - C(7)
    - C(8)
    - C(9)
    - C(10)
    - C(11)
  - - H(12)
    - H(13)
    - H(14)
    - H(15)
    - H(16)
    - H(17)
    - H(18)
    - H(19)
    - H(20)
    - H(21)
    - H(22)
    - H(23)
  - - N(24)
    - N(25)
    - N(26)
    - N(27)
    - N(28)
    - N(29)
    - N(30)
    - N(31)
    - N(32)
    - N(33)
    - N(34)
    - N(35)
    - N(36)
    - N(37)
    - N(38)
    - N(39)
    - N(40)
    - N(41)
    - N(42)
    - N(43)
    - N(44)
    - N(45)
    - N(46)
    - N(47)
  - - C(48)
    - O(49)
    - C(50)
    - O(51)
    - C(52)
    - O(53)
    - C(54)
    - O(55)
    - C(56)
    - O(57)
    - C(58)
    - O(59)
  - - C(60)
    - O(61)
    - C(62)
    - O(63)
    - C(64)
    - O(65)
    - C(66)
    - O(67)
    - C(68)
    - O(69)
    - C(70)
    - O(71)
  - - C(72)
    - H(73)
    - H(74)
    - C(75)
    - H(76)
    - H(77)
    - C(78)
    - H(79)
    - H(80)
    - C(81)
    - H(82)
    - H(83)
  - - C(84)
    - H(85)
    - H(86)
    - C(87)
    - H(88)
    - H(89)
    - C(90)
    - H(91)
    - H(92)
    - C(93)
    - H(94)
    - H(95)
  - - C(96)
    - H(97)
    - H(98)
    - C(99)
    - H(100)
    - H(101)
    - C(102)
    - H(103)
    - H(104)
    - C(105)
    - H(106)
    - H(107)
