umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_cucurbit_7_uril.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: D7h
order: 28
equivalence_sets:
  - - C(0)
    - C(1)
    - C(2)
    - C(3)
    - C(4)
    - C(5)
    - C(6)
    - C(7)
    - C(8)
    - C(9)
    - C(10)
    - C(11)
    - C(12)
    - C(13)
  - - H(14)
    - H(15)
    - H(16)
    - H(17)
    - H(18)
    - H(19)
    - H(20)
    - H(21)
    - H(22)
    - H(23)
    - H(24)
    - H(25)
    - H(26)
    - H(27)
  - - N(28)
    - N(29)
    - N(30)
    - N(31)
    - N(32)
    - N(33)
    - N(34)
    - N(35)
    - N(36)
    - N(37)
    - N(38)
    - N(39)
    - N(40)
    - N(41)
    - N(42)
    - N(43)
    - N(44)
    - N(45)
    - N(46)
    - N(47)
    - N(48)
    - N(49)
    - N(50)
    - N(51)
    - N(52)
    - N(53)
    - N(54)
    - N(55)
  - - C(56)
    - O(57)
    - C(58)
    - O(59)
    - C(60)
    - O(61)
    - C(62)
    - O(63)
    - C(64)
    - O(65)
    - C(66)
    - O(67)
    - C(68)
    - O(69)
  - - C(70)
    - O(71)
    - C(72)
    - O(73)
    - C(74)
    - O(75)
    - C(76)
    - O(77)
    - C(78)
    - O(79)
    - C(80)
    - O(81)
    - C(82)
    - O(83)
  - - C(84)
    - H(85)
    - H(86)
    - C(87)
    - H(88)
    - H(89)
    - C(90)
    - H(91)
    - H(92)
    - C(93)
    - H(94)
    - H(95)
    - C(96)
    - H(97)
  - - H(98)
    - C(99)
    - H(100)
    - H(101)
    - C(102)
    - H(103)
    - H(104)
    - C(105)
    - H(106)
    - H(107)
    - C(108)
    - H(109)
    - H(110)
    - C(111)
  - - H(112)
    - H(113)
    - C(114)
    - H(115)
    - H(116)
    - C(117)
    - H(118)
    - H(119)
    - C(120)
    - H(121)
    - H(122)
    - C(123)
    - H(124)
    - H(125)
